# devtools-course-practice

code/Maximov-Maxim/: CMakeLists.txt  CTestTests.txt
code/Maximov-Maxim/application/: app.cxx
code/Maximov-Maxim/include/: alghuffman.h  alghuffman_application.h
code/Maximov-Maxim/src/: alghuffman.cxx  alghuffman_application.cxx
code/Maximov-Maxim/test/: input.txt  output.txt  test_alghuffman_application.cpp  test_huffman_algorithm.cpp  wrongBody.txt  wrongHead.txt  wrong_input.txt
